trunk/Archive2/ec/2356bb1af66581/output
main.cpp: In function ‘int main()’:
main.cpp:8:12: error: type/value mismatch at argument 1 in template parameter list for ‘template<int N> struct X’
     X<int()>  x3; //error  
            ^
main.cpp:8:12: error:   expected a constant of type ‘int’, got ‘int()’
main.cpp:8:17: error: invalid type in declaration before ‘;’ token
     X<int()>  x3; //error  
                 ^
